<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_received"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_any_text_in_this_field"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header_reply" />


    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_main"
        />

   <EditText
       android:id="@+id/editText_main"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:hint="@string/enter_your_message_here"
       android:inputType="textPersonName"
       android:ems="10"
       android:text="@string/delete_any_text_in_this_field"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBaseline_toBaselineOf="@+id/button_send"
       app:layout_constraintEnd_toStartOf="@+id/button_send"
       android:autofillHints=""
       />

</androidx.constraintlayout.widget.ConstraintLayout>